--- a/Back/GreenLandBack/docker-compose.yml
+++ b/Back/GreenLandBack/docker-compose.yml
@@ -11,3 +11,21 @@ services:
       - ./db.sqlite3:/app/db.sqlite3
 
     command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+
+  
+  postgres_db:
+    image: postgres:15
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    
+    ports:
+      - "5432:5432"
+
+
+volumes:
+  postgres_data:
