--- a/Back/GreenLandBack/requirements.txt
+++ b/Back/GreenLandBack/requirements.txt
@@ -10,6 +10,7 @@ niquests==3.14.1
 openmeteo_requests==1.5.0
 openmeteo_sdk==1.20.0
 pillow==11.2.1
+psycopg2-binary==2.9.10
 PyJWT==2.9.0
 qh3==1.5.1
 sqlparse==0.5.3
