--- a/Back/GreenLandBack/docker-compose.yml
+++ b/Back/GreenLandBack/docker-compose.yml
@@ -12,8 +12,15 @@ services:
 
     command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
 
+    depends_on:
+      - db
+
+    env_file:
+      - .env
+
   
-  postgres_db:
+  db:
+    container_name: postgres_db
     image: postgres:15
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
