--- a/Back/GreenLandBack/requirements.txt
+++ b/Back/GreenLandBack/requirements.txt
@@ -12,6 +12,7 @@ openmeteo_sdk==1.20.0
 pillow==11.2.1
 psycopg2-binary==2.9.10
 PyJWT==2.9.0
+python-decouple==3.8
 qh3==1.5.1
 sqlparse==0.5.3
 typing==3.7.4.3
