--- a/Back/GreenLandBack/docker-compose.yml
+++ b/Back/GreenLandBack/docker-compose.yml
@@ -14,6 +14,7 @@ services:
 
     depends_on:
       - db
+      - redis
 
     env_file:
       - .env
@@ -32,6 +33,14 @@ services:
     
     ports:
       - "5432:5432"
+
+
+  redis:
+    container_name: backend_redis
+    image: redis
+    ports:
+      - "6379:6379"
+
 
 
 volumes:
