--- a/Back/GreenLandBack/requirements.txt
+++ b/Back/GreenLandBack/requirements.txt
@@ -1,20 +1,36 @@
+amqp==5.3.1
 asgiref==3.8.1
+billiard==4.2.1
+celery==5.5.3
 charset-normalizer==3.4.2
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 Django==5.2.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 flatbuffers==25.2.10
 h11==0.16.0
 jh2==5.0.9
+kombu==5.5.4
 niquests==3.14.1
 openmeteo_requests==1.5.0
 openmeteo_sdk==1.20.0
+packaging==25.0
 pillow==11.2.1
+prompt_toolkit==3.0.51
 psycopg2-binary==2.9.10
 PyJWT==2.9.0
+python-dateutil==2.9.0.post0
 python-decouple==3.8
 qh3==1.5.1
+redis==6.2.0
+six==1.17.0
 sqlparse==0.5.3
 typing==3.7.4.3
+tzdata==2025.2
 urllib3-future==2.12.922
+vine==5.1.0
 wassima==1.2.2
+wcwidth==0.2.13
