feat: added celery to docker-compose

--- a/Back/GreenLandBack/docker-compose.yml
+++ b/Back/GreenLandBack/docker-compose.yml
@@ -41,6 +41,15 @@ services:
     ports:
       - "6379:6379"
 
+  celery:
+    container_name: backend_celery
+    build: .
+    command: ["celery", "-A", "GreenLandBack.celery_app", "worker", "--loglevel=info"]
+    volumes:
+      - .:/app
+    depends_on:
+      - redis
+      - backend
 
 
 volumes:
