--- a/Back/GreenLandBack/requirements.txt
+++ b/Back/GreenLandBack/requirements.txt
@@ -7,7 +7,10 @@ click==8.2.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+cron-descriptor==1.4.5
 Django==5.2.1
+django-celery-beat==2.8.1
+django-timezone-field==7.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 flatbuffers==25.2.10
@@ -22,6 +25,7 @@ pillow==11.2.1
 prompt_toolkit==3.0.51
 psycopg2-binary==2.9.10
 PyJWT==2.9.0
+python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 qh3==1.5.1
