--- a/Back/GreenLandBack/requirements.txt
+++ b/Back/GreenLandBack/requirements.txt
@@ -2,6 +2,7 @@ amqp==5.3.1
 asgiref==3.8.1
 billiard==4.2.1
 celery==5.5.3
+channels==4.2.2
 charset-normalizer==3.4.2
 click==8.2.1
 click-didyoumean==0.3.1
